--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
     "require": {
         "php": "^7.4",
         "laravel/framework": "^8.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Microservices\\": "src"
+        }
     }
 }
